[gd_scene load_steps=2 format=3 uid="uid://c6d3y8lrpbrpo"]

[ext_resource type="Script" path="res://player/hud/bet_dialog.gd" id="1_3i4p2"]

[node name="Bet Dialog" type="Control"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3i4p2")

[node name="Dim" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -200.0
offset_right = 260.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Content" type="VBoxContainer" parent="Panel/Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/Margin/Content"]
layout_mode = 2
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32
text = "BET"

[node name="BetRow" type="HBoxContainer" parent="Panel/Margin/Content"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="BetLabel" type="Label" parent="Panel/Margin/Content/BetRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Bet:"

[node name="BetValue" type="Label" parent="Panel/Margin/Content/BetRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "10"

[node name="BetSlider" type="HSlider" parent="Panel/Margin/Content"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
max_value = 100.0
step = 1.0
value = 10.0
size_flags_horizontal = 3

[node name="HintLabel" type="Label" parent="Panel/Margin/Content"]
unique_name_in_owner = true
layout_mode = 2
visible = false
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24
text = "Need 10 coins"

[node name="StartButton" type="Button" parent="Panel/Margin/Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "START"

[node name="HomeButton" type="Button" parent="Panel/Margin/Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "HOME"
